--- a/public/übermich/index.html
+++ b/public/übermich/index.html
@@ -111,6 +111,11 @@ Und ich habe diese super kreative und tolle Website gecoded.
                 </a>
             </li>
             <li>
+                <a href="http://localhost:1313/supporter/" title="Supporter">
+                    <span>Supporter</span>
+                </a>
+            </li>
+            <li>
                 <a href="http://localhost:1313/%C3%BCbermich/" title="Über mich">
                     <span class="active">Über mich</span>
                 </a>
@@ -145,7 +150,7 @@ Und ich habe diese super kreative und tolle Website gecoded.
     </main>
     
 <footer class="footer">
-        <span>© 2026 Physik 2025/26 6M · Powered by Simon ze Hugo &amp; bissl Johni12</span>
+        <span>© 2026 Physik 2025/26 6M · Powered by <strong>Simon the Goat</strong> &amp; <strong>HUGO</strong></span>
 </footer>
 </body>
 
